correction mobile

--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ body {
 
 #nav-container {
   background: #3b94e0;
-  height: 60px;
+  height: 50px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -50,7 +50,7 @@ nav {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  height: 100%; }
+  height: 50px; }
 
 .nav-item {
   border-bottom: 2px solid #eee;
